@@ -91,11 +91,6 @@ tasks.processResources {
 
 tasks.test {
     dependsOn(testWeb)
-    jvmArgs = listOf(
-        "--add-opens",
-        "java.base/java.lang=ALL-UNNAMED",
-        "java.base/java.util=ALL-UNNAMED",
-    )
 }
 
 val allurePlugin by configurations.existing
